--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/png" href="/public/tracko.png" />
+    <link rel="icon" type="image/png" href="/favicon.ico" />
     <link href="/src/output.css" rel="stylesheet" />
     <link
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap"
@@ -10,7 +10,7 @@
     />
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Tracko</title>
+    <title>Ferretero.IA - Tus números tienen algo que decirte.</title>
   </head>
   <body>
     <div id="root"></div>
