--- a/frontend/index.html
+++ b/frontend/index.html
@@ -12,7 +12,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Ferretero.IA - Tus números tienen algo que decirte.</title>
   </head>
-  <body>
+  <body style="background: #171617;">
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
