new landings for specific tools

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -10,7 +10,7 @@
     />
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Ferretero.IA - Tus números tienen algo que decirte.</title>
+    <title>Analisis.Ferreteros.app  - Tus números tienen algo que decirte.</title>
   </head>
   <body style="background: #171617;">
     <div id="root"></div>
