--- a/frontend/index.html
+++ b/frontend/index.html
@@ -26,7 +26,7 @@
     <!-- End Meta Pixel Code -->
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Analisis.Ferreteros.app  - Tus números tienen algo que decirte.</title>
+    <title>Ferreteros.app - Tus números tienen algo que decirte.</title>
   </head>
   <body style="background: #171617;">
     <noscript><img height="1" width="1" style="display:none"
